syntax = "proto3";
package rofi.messages;

import "jointSetPosWithSpeedCmd.proto";
import "jointSetSpeedCmd.proto";
import "jointSetTorqueCmd.proto";

message JointCmd {
    enum Type {
        GET_MAX_POSITION = 0;
        GET_MIN_POSITION = 1;
        GET_MAX_SPEED = 2;
        GET_MIN_SPEED = 3;
        GET_MAX_TORQUE = 4;
        GET_POSITION = 5;
        GET_SPEED = 6;
        GET_TORQUE = 7;
        SET_POS_WITH_SPEED = 8;
        SET_SPEED = 9;
        SET_TORQUE = 10;
    }
    Type cmdType = 1;
    int32 joint = 2;

    JointSetPosWithSpeedCmd setPosWithSpeed = 4;
    JointSetSpeedCmd setSpeed = 3;
    JointSetTorqueCmd setTorque = 5;
}
